[gd_scene load_steps=33 format=3 uid="uid://b01druweyw5m6"]

[ext_resource type="Texture2D" uid="uid://bacj4u202xlwd" path="res://objects/boss/lord/sprites/lord body.png" id="1_fh4fn"]
[ext_resource type="Texture2D" uid="uid://dkvq6apdyd2w5" path="res://objects/boss/lord/sprites/lord body fall.png" id="1_jylpb"]
[ext_resource type="Script" uid="uid://b3m6281r3d2m5" path="res://objects/boss/lord/script_boss_lord.gd" id="1_oxt3u"]
[ext_resource type="Texture2D" uid="uid://cjqs8704v7qpr" path="res://objects/boss/lord/sprites/lord head static.png" id="2_qxeun"]
[ext_resource type="Texture2D" uid="uid://d15b35suld3uu" path="res://objects/boss/lord/sprites/lord body walk.png" id="3_tp0hq"]
[ext_resource type="Texture2D" uid="uid://bjp7qwbh6rpac" path="res://objects/boss/lord/sprites/lord head.png" id="4_tp0hq"]
[ext_resource type="Texture2D" uid="uid://dg6c0raktja1q" path="res://objects/boss/lord/sprites/lord hand.png" id="5_myusw"]
[ext_resource type="Script" uid="uid://e7xdv6p1jog0" path="res://objects/boss/script_boss_state_machine.gd" id="6_4ks5j"]
[ext_resource type="Script" uid="uid://diwjb4vmqcl6o" path="res://objects/boss/guardian/body_states/script_guardian_body_state_intro.gd" id="7_oxt3u"]
[ext_resource type="Script" uid="uid://dg4yufrwsys45" path="res://objects/boss/guardian/body_states/script_guardian_body_state_normal.gd" id="8_qxeun"]
[ext_resource type="Script" uid="uid://cu08e20khd5t8" path="res://objects/boss/guardian/body_states/script_guardian_body_state_attack.gd" id="9_fsf0g"]
[ext_resource type="Script" uid="uid://c8y3onbwddhi0" path="res://objects/boss/guardian/body_states/script_guardian_body_state_knockback.gd" id="10_d7v5j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6y87w"]
size = Vector2(32, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8dd2"]
atlas = ExtResource("1_fh4fn")
region = Rect2(0, 0, 64, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_myusw"]
atlas = ExtResource("3_tp0hq")
region = Rect2(0, 0, 64, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjp1l"]
atlas = ExtResource("3_tp0hq")
region = Rect2(64, 0, 64, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmxp1"]
atlas = ExtResource("3_tp0hq")
region = Rect2(128, 0, 64, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1vs4"]
atlas = ExtResource("3_tp0hq")
region = Rect2(192, 0, 64, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc423"]
atlas = ExtResource("3_tp0hq")
region = Rect2(0, 44, 64, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ks5j"]
atlas = ExtResource("3_tp0hq")
region = Rect2(64, 44, 64, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxt3u"]
atlas = ExtResource("3_tp0hq")
region = Rect2(128, 44, 64, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxeun"]
atlas = ExtResource("3_tp0hq")
region = Rect2(192, 44, 64, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_jylpb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_jylpb")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8dd2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_myusw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjp1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmxp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1vs4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc423")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ks5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxt3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxeun")
}],
"loop": true,
"name": &"walk",
"speed": 14.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fsf0g"]
atlas = ExtResource("4_tp0hq")
region = Rect2(0, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7v5j"]
atlas = ExtResource("4_tp0hq")
region = Rect2(26, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2507t"]
atlas = ExtResource("4_tp0hq")
region = Rect2(52, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c4ax"]
atlas = ExtResource("4_tp0hq")
region = Rect2(78, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_23q12"]
atlas = ExtResource("4_tp0hq")
region = Rect2(104, 0, 26, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_tp0hq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsf0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7v5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2507t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c4ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23q12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c4ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2507t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7v5j")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tp0hq"]
radius = 9.0

[sub_resource type="Animation" id="Animation_myusw"]
resource_name = "flicker"
length = 0.40000334
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../node_sprites:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.26666665, 0.33333337, 0.39999998),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xjp1l"]
_data = {
&"flicker": SubResource("Animation_myusw")
}

[node name="charbod_lord_root" type="CharacterBody2D" node_paths=PackedStringArray("animation_p")]
collision_layer = 0
script = ExtResource("1_oxt3u")
animation_p = NodePath("aniplr")
texture_head = ExtResource("2_qxeun")
texture_hand = ExtResource("5_myusw")
texture_body = ExtResource("1_fh4fn")

[node name="colshape_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_6y87w")

[node name="node_sprites" type="Node2D" parent="."]

[node name="anisprite_body" type="AnimatedSprite2D" parent="node_sprites"]
sprite_frames = SubResource("SpriteFrames_jylpb")
animation = &"walk"
frame_progress = 0.84031695

[node name="node_head" type="Node2D" parent="node_sprites"]

[node name="anisprite_head" type="AnimatedSprite2D" parent="node_sprites/node_head"]
position = Vector2(0, -26)
sprite_frames = SubResource("SpriteFrames_tp0hq")
autoplay = "default"
frame_progress = 0.49103692

[node name="area2D_hurtbox" type="Area2D" parent="node_sprites/node_head"]

[node name="colshape_hurtbox" type="CollisionShape2D" parent="node_sprites/node_head/area2D_hurtbox"]
position = Vector2(0, -31)
shape = SubResource("CircleShape2D_tp0hq")
debug_color = Color(0.23279458, 0.520815, 0.9633785, 0.41960785)

[node name="node_rhand" type="Node2D" parent="node_sprites"]
position = Vector2(-14, 2)

[node name="spr2D_rhand" type="Sprite2D" parent="node_sprites/node_rhand"]
position = Vector2(-2, -8)
texture = ExtResource("5_myusw")

[node name="node_lhand" type="Node2D" parent="node_sprites"]
position = Vector2(14, 2)

[node name="spr2D_lhand" type="Sprite2D" parent="node_sprites/node_lhand"]
position = Vector2(2, -8)
scale = Vector2(-1, 1)
texture = ExtResource("5_myusw")

[node name="aniplr" type="AnimationPlayer" parent="."]

[node name="aniplr_flicker" type="AnimationPlayer" parent="."]
root_node = NodePath("../aniplr")
libraries = {
&"": SubResource("AnimationLibrary_xjp1l")
}

[node name="node_body_states" type="Node" parent="."]
script = ExtResource("6_4ks5j")

[node name="intro" type="Node" parent="node_body_states" node_paths=PackedStringArray("guard_body")]
script = ExtResource("7_oxt3u")
guard_body = NodePath("")

[node name="normal" type="Node" parent="node_body_states" node_paths=PackedStringArray("guard_body")]
script = ExtResource("8_qxeun")
guard_body = NodePath("")

[node name="attack" type="Node" parent="node_body_states" node_paths=PackedStringArray("guard_body")]
script = ExtResource("9_fsf0g")
guard_body = NodePath("")

[node name="knockback" type="Node" parent="node_body_states" node_paths=PackedStringArray("guard_body")]
script = ExtResource("10_d7v5j")
guard_body = NodePath("")
